# fastapi-hrun-web

./: README.md  app.py  pyproject.toml  requirements.txt
alembic/: __init__.py  env.py
demo/: main.py  worker.py
demo/api/: api.py  deps.py
demo/api/endpoints/: utils.py
demo/common/: events.py  exception.py  logger.py  response.py
demo/core/: celery_app.py  config.py
demo/crud/: base.py
demo/db/: base.py  base_class.py  session.py
demo/schemas/requests/: others.py
templates/: wait_result.html
test-qa/: .env  ENV.yml  debugtalk.py
